# crab-management-system

./: .env.example  Cargo.toml  build.rs
proto/: account.proto  (+6 more)
server/: Cargo.toml  build.rs
server/migrations/: 20230713021002_create-users-table.sql  20230713021242_create-accounts-table.sql  20230713021412_create-fields-table.sql  20230713021514_create-field-groups-table.sql  20230713021551_create-field-group-fields-table.sql  20230713021561_create-documents-table.sql  20230713021571_create-document-fields-table.sql  20230713021621_create-collections-table.sql  20230713021803_create-collection-documents-table.sql
server/src/: db.rs  error.rs  main.rs
server/src/account/: mod.rs
server/src/account/handler/: create.rs  delete.rs  get.rs  mod.rs  update.rs
server/src/account/repository/: batch_get.rs  create.rs  delete.rs  get.rs  mod.rs  update.rs
server/src/account/service/: batch_get.rs  create.rs  delete.rs  get.rs  mod.rs  update.rs
server/src/error/: mod.rs
server/src/field/: mod.rs
server/src/field/handler/: create.rs  delete.rs  get.rs  mod.rs  update.rs
server/src/field/repository/: batch_get.rs  create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
server/src/field/service/: batch_get.rs  create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
server/src/field_group/: mod.rs
server/src/field_group/handler/: mod.rs
server/src/field_group/repository/: create.rs  delete.rs  get.rs  update.rs
server/src/field_group/service/: create.rs  get.rs  mod.rs  update.rs
server/src/user/: create.rs  delete.rs  get.rs  mod.rs  update.rs
(+27 files in other folders)
