[package]
name = "oxy-cms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
minijinja = { version = "1.0.3", features = ["loader", "builtins"] }
once_cell = "1.18.0"
serde = { version = "1.0.171", features = ["derive"] }
tokio = { version="1.29.1", features=["full"] }
