[package]
name = "oxy-cms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
dotenv = "0.15.0"
prost = "0.11.9"
serde = { version = "1.0.171", features = ["derive"] }
sqlx = { version = "0.7.0", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
tokio = { version="1.29.1", features=["full"] }
tonic = "0.9.2"
tonic-web = "0.9.2"
validator = { version = "0.16.1", features = ["derive"] }

[build-dependencies]
tonic-build = "0.9.2"
